tenant: obligation CRUD with name field, manual source + soft delete; fix Map.of null NPEs; instrument_id nullable